--- a/assets/styles/utils/variables/color.scss
+++ b/assets/styles/utils/variables/color.scss
@@ -1,8 +1,13 @@
 $clr-btn-primary: #bce8ff;
+$clr-btn-primary-hover: #56c5ff;
 $clr-btn-secondary: #99f7ab;
-$clr-btn-tertiary: #3e92cc;
-$clr-btn-delete: #d8315b;
+$clr-btn-secondary-hover: #3af05d;
+$clr-btn-tertiary: #529CD1;
+$clr-btn-tertiary-hover: #235C85;
+$clr-btn-delete: #E4728E;
+$clr-btn-delete-hover: #A72042;
 $clr-btn-edit: #ffeebc;
+$clr-btn-edit-hover: #ffd456;
 
 $clr-white: #ffffff;
 $clr-line-principal: #63c476;
